--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "mapa";
 
 .footer{
     width: 100%;
@@ -41,8 +42,7 @@
         }
     }
     .copyright{
-        display: flex;
-        justify-content: center;
+        @include flex-center;
         align-items: center;
         .texto--copyright{
             font-size:large;
