--- a/SCSS/_galMobile.scss
+++ b/SCSS/_galMobile.scss
@@ -1,7 +1,9 @@
-.columnasGaleria{
-    img{
-    padding:0px 2px;
-    width:100%;
-    height:100%;
+.contenidoGaleria{
+    .columnasGaleria{
+        img{
+        padding:5%;
+        width:100%;
+        height:100%;
+        }
     }
 }
