--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "mapa";
 
 .contenidoContacto{
     min-height: calc(100vh - 90px - 141px);
@@ -21,8 +22,7 @@
                 margin:1% 0px;
             }
             .textoContactanos{
-                width: 100%;
-                margin:1% 0px;
+                @extend .dataContactanos;
                 height: 200px;
             }
             .inputEnviar{
@@ -33,8 +33,8 @@
         }
     }
     .encabezadoContacto{
-        font-size: xx-large;
-        font-style: italic;
-        color:$encabezados;
+        font-size: map-get($estilos,tFuente);
+        font-style: map-get($estilos,cursiva);
+        color:map-get($estilos,color);
     }
 }
