--- a/SCSS/_galeria.scss
+++ b/SCSS/_galeria.scss
@@ -1,13 +1,15 @@
+@import "mapa";
+
 .contenidoGaleria{
     min-height: calc(100vh - 90px - 141px);
     margin:1% 0px;
     .columnasGaleria{
         padding:0px;
-        display: flex;
-        justify-content: center;
+        @include flex-center;
         img{
             width:92%;
             height: 100%; 
+            padding: 5%;
         }
     }
     img{
