--- a/SCSS/_nosotros.scss
+++ b/SCSS/_nosotros.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "mapa";
 
 .contenidoNosotros{
     min-height: calc(100vh - 90px - 141px);
@@ -10,8 +11,7 @@
     }
     .imagenes1{
         margin:5px 0px;
-        display: flex;
-        justify-content: center;
+        @include flex-center;
         width: 100%;
         .imgArriba{
             margin:0px 2.5px;
@@ -37,9 +37,9 @@
     .historia--encabezado{
         overflow: hidden;
         padding-left:2%;
-        font-size: xx-large;
-        font-style: italic;
-        color:$encabezados;
+        font-size: map-get($estilos,tFuente);
+        font-style: map-get($estilos,cursiva);
+        color:map-get($estilos,color);
     }
     .historia--parrafo{
         padding-left:4%;
