--- a/SCSS/_contacMobile.scss
+++ b/SCSS/_contacMobile.scss
@@ -1,15 +1,51 @@
-.contenidoContacto{
-    .contenedor_contacto{
-        padding:0px;
+.contenedor__contacto{
+    grid-template-columns: 100%;
+    grid-template-rows: auto 1fr 1fr 340px;
+    grid-template-areas: 
+    "header"
+    "content"
+    "consulta"
+    "footer";
+    .contenido__contacto{
+        margin:0px;
+        padding: 0px;
+        align-items: center;
         .iframeMaps{
+            margin:0px;
+            padding:0px;
             width: 100%;
-        } 
-    } 
-    .encabezadoContacto{
-        font-size: x-large;
-        text-align: center;
+            height: 85%;
+        }
     }
-    .inputEnviar{
-        margin-bottom: 2%;
+    .contactanos--consultas{
+        align-items: center;
+        padding-top: 10px;
+        .form--consultas{
+            align-items: stretch;
+            .dataContactanos{
+                font-size: medium;
+                width: auto;
+                height: auto;
+                margin:5px 2%;
+            }
+            .textoContactanos{
+                font-size: medium;
+                width: auto;
+                height: auto;
+                margin:0px 2%;
+            }
+            .inputEnviar{
+                font-size: medium;
+                width:25%;
+                height: 35px;
+                margin:auto;
+                margin-top: 2%;
+                margin-bottom: 2%;
+            }
+        }
+    }
+    .encabezadoContacto{
+        margin:auto;
+        font-size: x-large;
     }
 }
