--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -1,40 +1,61 @@
 @import "colores";
 
-.contenidoContacto{
-    min-height: calc(100vh - 90px - 141px);
-    .contenedor_contacto{
-        margin-top: 1%;
+.contenedor__contacto{
+    display:grid;
+    background-image:tan;
+    min-height: 100vh;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: 90px calc(100vh - 90px - 141px) 140px;
+    grid-template-areas:
+    "header header"
+    "content consulta"
+    "footer footer";
+    .contenido__contacto{
+        grid-area:content;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
         .iframeMaps{
-            width: 95%;
+            width:100%;
             height: 80%;
+            margin-left: 10px;
         }
     }
-    .contenedor_contactanos{
-        margin-top: 1%;
+    .contactanos--consultas{
+        grid-area:consulta;
+        @extend .contenido__contacto;
         .form--consultas{
+            @extend .iframeMaps;
+            margin-left: 0px;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            margin-top: 10%;
+            align-items: center;   
             .dataContactanos{
-                width: 100%;
-                margin:1% 0px;
+                font-size: large;
+                height: 10%;
+                margin:5px 5px;
+                width:90%;
             }
             .textoContactanos{
-                width: 100%;
-                margin:1% 0px;
-                height: 200px;
+                @extend .dataContactanos;
+                height: 80%;
+                margin:0px;
             }
             .inputEnviar{
-                margin-top: 2%;
-                width: 200px;
-                height: 50px;
+                font-size: large;
+                margin:15px 0px;
+                width:15%;
+                height:10%;
             }
         }
     }
     .encabezadoContacto{
-        font-size: xx-large;
         font-style: italic;
+        font-size: xx-large;
+        margin-left: 20px;
         color:$encabezados;
     }
 }
