--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -64,3 +64,39 @@
     }
 
 }
+/*footer de paginas hechas con GRID*/
+.contenedorFooter{
+    @extend .footer;
+    grid-area:footer;
+    display: flex;
+    flex-direction: column;
+    .contenedor__newsletter{
+        display: flex;
+        width: 100%;
+        padding:0px 15px;
+        .contenedorH3{
+            width:25%;
+        }
+        .suscripcion{
+            width:450px;
+            margin-left:15px;
+            margin-right:15px;
+            .dataSuscripcion{
+                width: 100%;
+            }
+        }
+        .suscripcionBtn{
+            margin-top:10px;
+            margin-left: 30px;
+            .input__suscribirse{
+                background-color: rgb(141, 38, 38);
+                border:rgb(14, 59, 14);
+                border-radius: 10px;
+                font-size:large;
+                width:min-content;
+                height: min-content;
+            }
+        }
+    }
+
+}
