--- a/SCSS/_laptop.scss
+++ b/SCSS/_laptop.scss
@@ -10,4 +10,46 @@
        padding-top: 17%;
        height:80%;
     }
+    .contenedor__contacto{
+        grid-template-columns: 40% 60%;
+        grid-template-rows: 70px 1fr 100px;
+        grid-template-areas:
+        "header nav"
+        "content consulta"
+        "footer footer";
+    }
+    .contenido__contacto{
+        justify-content: flex-start;
+        margin:0px 20px;
+    }
+    .iframeMaps{
+        height: 70%;
+    }
+    .form--consultas{
+        height: 80%;
+        margin-top: 8%;
+    }
+    .dataContactanos{
+        font-size: large;
+        height: auto;
+    }
+    .textoContactanos{
+        font-size: large;
+        height: 200px;
+    }
+    .inputEnviar{
+        font-size: large;
+        margin:5px 0px;
+        height:8%;
+    }
+    .encabezadoConsulta{
+        font-size:x-large;
+        margin-left:0px;
+        padding-left: 35px;
+    }
+    .encabezadoContacto{
+        padding:auto;
+        margin-left:0px;
+        font-size: x-large;
+    }
 }
