--- a/SCSS/_contacto.scss
+++ b/SCSS/_contacto.scss
@@ -1,5 +1,5 @@
 @import "colores";
-
+/*pagina hecha con GRID*/
 .contenedor__contacto{
     display:grid;
     background-image:tan;
@@ -59,3 +59,4 @@
         color:$encabezados;
     }
 }
+/*termina pagina con GRID*/
