--- a/SCSS/_navMobile.scss
+++ b/SCSS/_navMobile.scss
@@ -20,7 +20,7 @@
         }
     }
 }
-/*nav para paginas con GRID*/
+/*nav para paginas hechas con GRID*/
 .contenedor__contacto{
     .headerContacto{
         background-color:rgb(129, 22, 22);
@@ -33,3 +33,4 @@
         }
     }
 }
+/*termina nav para paginas hechas con GRID*/
