--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -65,38 +65,50 @@
 
 }
 /*footer de paginas hechas con GRID*/
-.contenedorFooter{
-    @extend .footer;
-    grid-area:footer;
-    display: flex;
-    flex-direction: column;
-    .contenedor__newsletter{
+.contenedor__contacto{
+    .contenedorFooter{
+        @extend .footer;
+        grid-area:footer;
         display: flex;
-        width: 100%;
-        padding:0px 15px;
-        .contenedorH3{
-            width:25%;
-        }
-        .suscripcion{
-            width:450px;
-            margin-left:15px;
-            margin-right:15px;
-            .dataSuscripcion{
-                width: 100%;
+        flex-direction: column;
+        .contenedor__redes{
+            display: flex;
+            justify-content: center;
+            img{
+                padding:0px 2px;
             }
         }
-        .suscripcionBtn{
-            margin-top:10px;
-            margin-left: 30px;
-            .input__suscribirse{
-                background-color: rgb(141, 38, 38);
-                border:rgb(14, 59, 14);
-                border-radius: 10px;
-                font-size:large;
-                width:min-content;
-                height: min-content;
+        .contenedor__newsletter{
+            display: flex;
+            width: 100%;
+            padding:0px 15px;
+            .contenedorH3{
+                width:25%;
+            }
+            .contenedor__suscripcion{
+                width:450px;
+                margin-left:7px;
+                margin-right:23px;
+                .data--Suscripcion{
+                    border-radius: 10px;
+                    font-size: large;
+                    width: 100%;
+                    height: 40px;
+                    margin-top: 10px;
+                }
+            }
+            .contenedor__boton{
+                margin-top:10px;
+                margin-left: 21px;
+                .input--suscribirse{
+                    background-color: rgb(141, 38, 38);
+                    border:rgb(14, 59, 14);
+                    border-radius: 10px;
+                    font-size:large;
+                    width:min-content;
+                    height: min-content;
+                }
             }
         }
     }
-
 }
